# diego

./: .gitignore  BENCHMARKS  README.md
doc/diagrams/: Diagrams.pptx
src/diego/core/: core.go
src/diego/debug/: debug.go
src/diego/durable/: transactions.go  transactions_test.go
src/diego/examples/kvstore/: appendOp.go  bench_test.go  common_test.go  concatValuesOp.go  core_test.go  flipflopAddOp.go  kvstore.go  kvstore_test.go  lwwSetOp.go  parallel_bench_test.go  pessimisticSetOp.go  testAndSetOp.go  test_test.go
src/diego/examples/lego/: common.go  lego.go  ops.go  test_test.go  universe.go
src/diego/examples/lego/client/: .gitignore  BBox3d.cpp  BBox3d.h  CMakeLists.txt  Debug.cpp  Debug.h  IntTypes.h  JSonSerializer.cpp  JSonSerializer.h  LegoApp.cpp  LegoApp.h  LegoBrick.cpp  LegoBrick.h  LegoMainWindow.cpp  LegoMainWindow.h  LegoNotices.cpp  LegoNotices.h  LegoOps.cpp  LegoOps.h  LegoTransaction.cpp  LegoTransaction.h  LegoTransactionMgr.cpp  LegoTransactionMgr.h  LegoUniverse.cpp  LegoUniverse.h  LegoVoxelizer.cpp  LegoVoxelizer.h  MSIntTypes.h  MainWindow.cpp  MainWindow.h  Matrix4d.cpp  Matrix4d.h  Mesh.cpp  Mesh.h  Notice.cpp  Notice.h  NoticeMgr.cpp  NoticeMgr.h  Ray3d.cpp  Ray3d.h  (+31 more)
src/diego/examples/lego/client/forms/: MainWindow.ui
src/diego/examples/lego/client/models/: 6824.stl  MIT.stl
src/diego/examples/lego/server/: brick.go  common.go  lego.go  ops.go  ops_test.go  serializer.go  serializer_test.go  test_test.go  universe.go  xa.go
src/diego/examples/lego/server/main/: main.go
src/diego/examples/textot/: textot.go  textot_test.go
src/diego/helpers/: apply_helpers.go  resolve_helpers.go
src/diego/namespace/: namespace.go  namespace_test_common.go
src/diego/resolver/: interfaces.go  resolver.go  resolver_test_common.go
src/diego/tests/: benchmarks.go  common.go  sequential.go
src/diego/types/: interfaces.go  types.go
src/resolver/: debug.go  interfaces.go  resolver.go
